--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -51,6 +51,9 @@ jobs:
       with:
         go-version: "1.24"
 
+    - name: Install systemd development headers
+      run: sudo apt-get update && sudo apt-get install -y libsystemd-dev
+
     - name: build
       run: make build
   lint-format:
