--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -70,6 +70,9 @@ jobs:
       with:
         go-version: "1.24"
 
+    - name: Install systemd development headers
+      run: sudo apt-get update && sudo apt-get install -y libsystemd-dev
+
     - name: golangci-lint
       uses: golangci/golangci-lint-action@55c2c1448f86e01eaae002a5a3a9624417608d84 # v6.5.2
       with:
